Preserve top margin for body content when its container is an article (avoid sticky ribbon overlap)

--- a/styleguide/source/_patterns/02-organisms/04-hub/00-hub-header/_hub-header.scss
+++ b/styleguide/source/_patterns/02-organisms/04-hub/00-hub-header/_hub-header.scss
@@ -14,7 +14,8 @@
       top: 0;
       z-index: 100;
 
-      &+.layout {
+      &+ .layout,
+      &+ article {
         margin-top: 87px;
     }
   }
